fixed blurry image resizing in legacy browsers

--- a/assets/stylesheets/customizations.css
+++ b/assets/stylesheets/customizations.css
@@ -18,3 +18,9 @@ h1 a {
   font-weight: bold;
   text-decoration: none;
 }
+
+img {
+  image-rendering: optimizeQuality;
+  -ms-interpolation-mode: bicubic;
+}
+
